# BFS9000

./: .gitignore  README.es.md  README.md
.github/workflows/: build.yml  ci-marcontroller.yml  pcb-render-manual.yml
firmware/vial-qmk/keyboards/jguillen_lab/bfs9000/: bfs9000.c  config.h  keyboard.json  rules.mk
firmware/vial-qmk/keyboards/jguillen_lab/bfs9000/keymaps/default/: keymap.c
firmware/vial-qmk/keyboards/jguillen_lab/bfs9000/keymaps/vial/: config.h  keymap.c  vial.json
hardware/: README.es.md  README.md
hardware/BFS9000/: Addressable RGB LEDs.kicad_sch  BFS9000.kicad_pcb  BFS9000.kicad_pro  BFS9000.kicad_sch  Break Away Tabs.kicad_sch  Breakaway tabs.kicad_sch  Keyboard Switches.kicad_sch  Keyboard switches.kicad_sch  Left Half Sheet.kicad_sch  Left Numpad.kicad_sch  PIN-GPIO-COL-ROW.ods  README.es.md  README.md  RGB LEDs.kicad_sch  Right Numpad.kicad_sch  Right half Sheet.kicad_sch  TODO.md  Top split.kicad_sch  fp-lib-table  report.txt
hardware/BFS9000 bottom plate/: BFS9000 bottom plate.kicad_pcb  BFS9000 bottom plate.kicad_pro
hardware/BFS9000 switch plate/: BFS9000 switch plate.kicad_pcb  BFS9000 switch plate.kicad_pro
hardware/BFS9000 switch plate/Library.pretty/: Cherry_MX_DS_Hotswap_Vertical_Edge.kicad_mod
hardware/BFS9000/Logos.pretty/: BFS9000+Gran Canaria.kicad_mod  Wiki-QR.kicad_mod
hardware/BFS9000/Sofle_Pico.pretty/: Cust_SK6803_MINI-E_v3.5.5.kicad_mod  TO-236_VIS.kicad_mod
hodgepodge/marquichuelo/: LICENSE  README.es.md  README.md  config.h  keyboard.json  marquichuelo.c
hodgepodge/marquichuelo/keymaps/default/: keymap.c
hodgepodge/marquichuelo/keymaps/vial/: config.h  keymap.c  rules.mk  vial.json
media/: icon.ai
software/MARCOntroller/: Cargo.toml  LICENSE  README.es.md  README.md
software/MARCOntroller/assets/: icon.icns
software/MARCOntroller/locales/: en.yml  es.yml
software/MARCOntroller/src/: cli.rs  config.rs  hid.rs  logging.rs  main.rs  mqtt_agent.rs  ui.rs  vialrgb.rs
software/MARCOntroller/src/agent/: mod.rs  mqtt.rs  runtime.rs
software/MARCOntroller/src/keyboard/: hid.rs  mod.rs  vialrgb.rs
software/MARCOntroller/src/service/: control.rs  mod.rs  windows.rs
