[package]
edition = "2024"
name = "MARCOntroller"
version = "0.2.9"

[dependencies]
anyhow   = "1"
clap     = { version = "4", features = ["derive"] }
eframe = { version = "0.34.1", default-features = false, features = ["accesskit", "default_fonts", "glow", "x11", "wayland"] }
hidapi   = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
rust-i18n = "3"
sys-locale = "0.3"

# MQTT agent + Home Assistant discovery + config
directories-next = "2"
rumqttc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
toml = "1"

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Service
service-manager = "0.11"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"